fixed minor issue with edit profile page shifting when edit/save btn is clicked

--- a/CSS Modules/stylesUserEdit.module.css
+++ b/CSS Modules/stylesUserEdit.module.css
@@ -11,6 +11,7 @@
 .editButton {
   font-size: 1em;
   color:#ffffff;
+  width: 50px;
 }
 
 .editButton:hover {
